# system paths
option('iptables', type: 'array', value: ['iptables', '/sbin/iptables', '/usr/sbin/iptables'], description: 'path to iptables')
option('dnsmasq', type: 'array', value: ['dnsmasq', '/sbin/dnsmasq', '/usr/sbin/dnsmasq'], description: 'path to dnsmasq')

# platform
option('install_service', type: 'boolean', value: true, description: 'install service files')
option('logging_backend', type: 'combo', choices: ['journal', 'syslog'], value: 'journal', description: 'Use systemd-journal or syslog for logging')
option('logind_backend', type: 'combo', choices: ['systemd', 'elogind'], description: 'Use systemd-logind or elogind')
option('crypto', type: 'combo', choices: ['nss', 'gnutls'], value: 'nss', description: 'Cryptography library to use for certificate and key operations')

# features
option('concheck', type: 'boolean', value: true, description: 'enable connectivity checking support')
option('network_sharing', type: 'boolean', value: false, description: 'enable network sharing function')

# miscellaneous
option('docs', type: 'boolean', value: false, description: 'Build documentation')
option('tests', type: 'combo', choices: ['yes', 'no', 'root'], value: 'yes', description: 'Build NetworkManager tests')
option('more_asserts', type: 'string', value: 'all', description: 'Enable more assertions for debugging (0 = none, 100 = all, default: all)')
option('more_logging', type: 'boolean', value: true, description: 'Enable more debug logging')
option('valgrind', type: 'array', value: ['no'], description: 'Use valgrind to memory-check the tests')
option('valgrind_suppressions', type: 'string', value: '', description: 'Use specific valgrind suppression file')
